// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons bordered 1`] = `
<div
  className=" kamamana-CenterWrapper"
>
  <svg
    className="story-grid-pallete"
    height="100%"
    width="100%"
    xmlns="http://www.w3.org/2000/svg"
  >
    <defs>
      <pattern
        height="8"
        id="smallGrid"
        patternUnits="userSpaceOnUse"
        width="8"
      >
        <path
          d="M 8 0 L 0 0 0 8"
          fill="none"
          stroke="#ECEFF1"
          strokeWidth="0.5"
        />
      </pattern>
      <pattern
        height="80"
        id="grid"
        patternUnits="userSpaceOnUse"
        width="80"
      >
        <rect
          fill="url(#smallGrid)"
          height="80"
          width="80"
        />
        <path
          d="M 80 0 L 0 0 0 80"
          fill="none"
          stroke="#E0E0E0"
          strokeWidth="1"
        />
      </pattern>
    </defs>
    <rect
      fill="url(#grid)"
      height="100%"
      width="100%"
    />
  </svg>
  <div>
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <button
        className=" kamamana-ButtonStyled kamamana-_xs0rw0"
      >
        <span
          className="btn-text"
        >
          Click Me
        </span>
      </button>
    </div>
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
    <div
      style={
        Object {
          "background": "white",
          "bottom": 0,
          "display": "none",
          "left": 0,
          "overflow": "auto",
          "padding": "0 40px",
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 99999,
        }
      }
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        ×
      </button>
      <div>
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "backgroundColor": "#fff",
              "border": "1px solid #eee",
              "borderRadius": "2px",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
              "fontWeight": 300,
              "lineHeight": 1.45,
              "marginBottom": "20px",
              "marginTop": "20px",
              "padding": "20px 40px 40px",
            }
          }
        >
          <div
            style={
              Object {
                "borderBottom": "1px solid #eee",
                "marginBottom": 10,
                "paddingTop": 10,
              }
            }
          >
            <h1
              style={
                Object {
                  "fontSize": "35px",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
              Buttons
            </h1>
            <h2
              style={
                Object {
                  "fontSize": "22px",
                  "fontWeight": 400,
                  "margin": "0 0 10px 0",
                  "padding": 0,
                }
              }
            >
              bordered
            </h2>
          </div>
          
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Story Source
            </h1>
            <pre
              className="css-r8d96o eyvlbql0"
            >
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    Button
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        type
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            bordered
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        text
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            Click Me
                          </span>
                          "
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </div>
              <button
                className="css-1naocv3 eva467m0"
                onClick={[Function]}
              >
                <div
                  className="css-lvl6aa eva467m1"
                >
                  <div
                    style={
                      Object {
                        "marginBottom": 6,
                      }
                    }
                  >
                    Copied!
                  </div>
                  <div>
                    Copy
                  </div>
                </div>
              </button>
            </pre>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Prop Types
            </h1>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }
              >
                "
                Button
                " Component
              </h2>
              <table
                className="css-1uhv8nx e1vdo5380"
              >
                <thead>
                  <tr>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      property
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      propType
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      required
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      default
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="css-1qcb1f7 e6fp4ir0"
                    >
                      style
                    </td>
                    <td
                      className="css-1qcb1f7 e6fp4ir0"
                    >
                      <span>
                        unknown
                      </span>
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    >
                      -
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    >
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        {
                        }
                      </span>
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Buttons custom 1`] = `
<div
  className=" kamamana-CenterWrapper"
>
  <svg
    className="story-grid-pallete"
    height="100%"
    width="100%"
    xmlns="http://www.w3.org/2000/svg"
  >
    <defs>
      <pattern
        height="8"
        id="smallGrid"
        patternUnits="userSpaceOnUse"
        width="8"
      >
        <path
          d="M 8 0 L 0 0 0 8"
          fill="none"
          stroke="#ECEFF1"
          strokeWidth="0.5"
        />
      </pattern>
      <pattern
        height="80"
        id="grid"
        patternUnits="userSpaceOnUse"
        width="80"
      >
        <rect
          fill="url(#smallGrid)"
          height="80"
          width="80"
        />
        <path
          d="M 80 0 L 0 0 0 80"
          fill="none"
          stroke="#E0E0E0"
          strokeWidth="1"
        />
      </pattern>
    </defs>
    <rect
      fill="url(#grid)"
      height="100%"
      width="100%"
    />
  </svg>
  <div>
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <button
        className=" kamamana-ButtonStyled kamamana-_am0lgu"
      >
        <span
          className="btn-text"
        >
          Click Me
        </span>
      </button>
    </div>
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
    <div
      style={
        Object {
          "background": "white",
          "bottom": 0,
          "display": "none",
          "left": 0,
          "overflow": "auto",
          "padding": "0 40px",
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 99999,
        }
      }
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        ×
      </button>
      <div>
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "backgroundColor": "#fff",
              "border": "1px solid #eee",
              "borderRadius": "2px",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
              "fontWeight": 300,
              "lineHeight": 1.45,
              "marginBottom": "20px",
              "marginTop": "20px",
              "padding": "20px 40px 40px",
            }
          }
        >
          <div
            style={
              Object {
                "borderBottom": "1px solid #eee",
                "marginBottom": 10,
                "paddingTop": 10,
              }
            }
          >
            <h1
              style={
                Object {
                  "fontSize": "35px",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
              Buttons
            </h1>
            <h2
              style={
                Object {
                  "fontSize": "22px",
                  "fontWeight": 400,
                  "margin": "0 0 10px 0",
                  "padding": 0,
                }
              }
            >
              custom
            </h2>
          </div>
          
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Story Source
            </h1>
            <pre
              className="css-r8d96o eyvlbql0"
            >
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    Button
                  </span>
                  <span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        style
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            {
                            <span>
                              <span>
                                <br />
                                  
                                  
                              </span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                bdrs
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              100
                            </span>
                            ,
                            <span>
                              <span>
                                <br />
                                  
                                  
                              </span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                c
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              '#E65100'
                            </span>
                            ,
                            <span>
                              <span>
                                <br />
                                  
                                  
                              </span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                bgc
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              '#FFAB00'
                            </span>
                            ,
                            <span>
                              <span>
                                <br />
                                  
                                  
                              </span>
                              …
                            </span>
                            <span>
                              <br />
                                
                            </span>
                            }
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        fgcHover
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            #FFAB00
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        bgcHover
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            #E65100
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        text
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            Click Me
                          </span>
                          "
                        </span>
                      </span>
                      <br />
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </div>
              <button
                className="css-1naocv3 eva467m0"
                onClick={[Function]}
              >
                <div
                  className="css-lvl6aa eva467m1"
                >
                  <div
                    style={
                      Object {
                        "marginBottom": 6,
                      }
                    }
                  >
                    Copied!
                  </div>
                  <div>
                    Copy
                  </div>
                </div>
              </button>
            </pre>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Prop Types
            </h1>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }
              >
                "
                Button
                " Component
              </h2>
              <table
                className="css-1uhv8nx e1vdo5380"
              >
                <thead>
                  <tr>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      property
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      propType
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      required
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      default
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="css-1qcb1f7 e6fp4ir0"
                    >
                      style
                    </td>
                    <td
                      className="css-1qcb1f7 e6fp4ir0"
                    >
                      <span>
                        unknown
                      </span>
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    >
                      -
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    >
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        {
                        }
                      </span>
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Buttons default 1`] = `
<div
  className=" kamamana-CenterWrapper"
>
  <svg
    className="story-grid-pallete"
    height="100%"
    width="100%"
    xmlns="http://www.w3.org/2000/svg"
  >
    <defs>
      <pattern
        height="8"
        id="smallGrid"
        patternUnits="userSpaceOnUse"
        width="8"
      >
        <path
          d="M 8 0 L 0 0 0 8"
          fill="none"
          stroke="#ECEFF1"
          strokeWidth="0.5"
        />
      </pattern>
      <pattern
        height="80"
        id="grid"
        patternUnits="userSpaceOnUse"
        width="80"
      >
        <rect
          fill="url(#smallGrid)"
          height="80"
          width="80"
        />
        <path
          d="M 80 0 L 0 0 0 80"
          fill="none"
          stroke="#E0E0E0"
          strokeWidth="1"
        />
      </pattern>
    </defs>
    <rect
      fill="url(#grid)"
      height="100%"
      width="100%"
    />
  </svg>
  <div>
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <button
        className=" kamamana-ButtonStyled kamamana-_15wupid"
      >
        <span
          className="btn-text"
        >
          Click Me
        </span>
      </button>
    </div>
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
    <div
      style={
        Object {
          "background": "white",
          "bottom": 0,
          "display": "none",
          "left": 0,
          "overflow": "auto",
          "padding": "0 40px",
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 99999,
        }
      }
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        ×
      </button>
      <div>
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "backgroundColor": "#fff",
              "border": "1px solid #eee",
              "borderRadius": "2px",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
              "fontWeight": 300,
              "lineHeight": 1.45,
              "marginBottom": "20px",
              "marginTop": "20px",
              "padding": "20px 40px 40px",
            }
          }
        >
          <div
            style={
              Object {
                "borderBottom": "1px solid #eee",
                "marginBottom": 10,
                "paddingTop": 10,
              }
            }
          >
            <h1
              style={
                Object {
                  "fontSize": "35px",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
              Buttons
            </h1>
            <h2
              style={
                Object {
                  "fontSize": "22px",
                  "fontWeight": 400,
                  "margin": "0 0 10px 0",
                  "padding": 0,
                }
              }
            >
              default
            </h2>
          </div>
          
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Story Source
            </h1>
            <pre
              className="css-r8d96o eyvlbql0"
            >
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    Button
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        text
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            Click Me
                          </span>
                          "
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </div>
              <button
                className="css-1naocv3 eva467m0"
                onClick={[Function]}
              >
                <div
                  className="css-lvl6aa eva467m1"
                >
                  <div
                    style={
                      Object {
                        "marginBottom": 6,
                      }
                    }
                  >
                    Copied!
                  </div>
                  <div>
                    Copy
                  </div>
                </div>
              </button>
            </pre>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Prop Types
            </h1>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }
              >
                "
                Button
                " Component
              </h2>
              <table
                className="css-1uhv8nx e1vdo5380"
              >
                <thead>
                  <tr>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      property
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      propType
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      required
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      default
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="css-1qcb1f7 e6fp4ir0"
                    >
                      style
                    </td>
                    <td
                      className="css-1qcb1f7 e6fp4ir0"
                    >
                      <span>
                        unknown
                      </span>
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    >
                      -
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    >
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        {
                        }
                      </span>
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Buttons disabled 1`] = `
<div
  className=" kamamana-CenterWrapper"
>
  <svg
    className="story-grid-pallete"
    height="100%"
    width="100%"
    xmlns="http://www.w3.org/2000/svg"
  >
    <defs>
      <pattern
        height="8"
        id="smallGrid"
        patternUnits="userSpaceOnUse"
        width="8"
      >
        <path
          d="M 8 0 L 0 0 0 8"
          fill="none"
          stroke="#ECEFF1"
          strokeWidth="0.5"
        />
      </pattern>
      <pattern
        height="80"
        id="grid"
        patternUnits="userSpaceOnUse"
        width="80"
      >
        <rect
          fill="url(#smallGrid)"
          height="80"
          width="80"
        />
        <path
          d="M 80 0 L 0 0 0 80"
          fill="none"
          stroke="#E0E0E0"
          strokeWidth="1"
        />
      </pattern>
    </defs>
    <rect
      fill="url(#grid)"
      height="100%"
      width="100%"
    />
  </svg>
  <div>
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <button
        className=" kamamana-ButtonStyled kamamana-_15wupid"
        disabled={true}
      >
        <span
          className="btn-text"
        >
          Click Me
        </span>
      </button>
    </div>
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
    <div
      style={
        Object {
          "background": "white",
          "bottom": 0,
          "display": "none",
          "left": 0,
          "overflow": "auto",
          "padding": "0 40px",
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 99999,
        }
      }
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        ×
      </button>
      <div>
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "backgroundColor": "#fff",
              "border": "1px solid #eee",
              "borderRadius": "2px",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
              "fontWeight": 300,
              "lineHeight": 1.45,
              "marginBottom": "20px",
              "marginTop": "20px",
              "padding": "20px 40px 40px",
            }
          }
        >
          <div
            style={
              Object {
                "borderBottom": "1px solid #eee",
                "marginBottom": 10,
                "paddingTop": 10,
              }
            }
          >
            <h1
              style={
                Object {
                  "fontSize": "35px",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
              Buttons
            </h1>
            <h2
              style={
                Object {
                  "fontSize": "22px",
                  "fontWeight": 400,
                  "margin": "0 0 10px 0",
                  "padding": 0,
                }
              }
            >
              disabled
            </h2>
          </div>
          
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Story Source
            </h1>
            <pre
              className="css-r8d96o eyvlbql0"
            >
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    Button
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        disabled
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        text
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            Click Me
                          </span>
                          "
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </div>
              <button
                className="css-1naocv3 eva467m0"
                onClick={[Function]}
              >
                <div
                  className="css-lvl6aa eva467m1"
                >
                  <div
                    style={
                      Object {
                        "marginBottom": 6,
                      }
                    }
                  >
                    Copied!
                  </div>
                  <div>
                    Copy
                  </div>
                </div>
              </button>
            </pre>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Prop Types
            </h1>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }
              >
                "
                Button
                " Component
              </h2>
              <table
                className="css-1uhv8nx e1vdo5380"
              >
                <thead>
                  <tr>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      property
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      propType
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      required
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      default
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="css-1qcb1f7 e6fp4ir0"
                    >
                      style
                    </td>
                    <td
                      className="css-1qcb1f7 e6fp4ir0"
                    >
                      <span>
                        unknown
                      </span>
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    >
                      -
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    >
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        {
                        }
                      </span>
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Buttons ghost 1`] = `
<div
  className=" kamamana-CenterWrapper"
>
  <svg
    className="story-grid-pallete"
    height="100%"
    width="100%"
    xmlns="http://www.w3.org/2000/svg"
  >
    <defs>
      <pattern
        height="8"
        id="smallGrid"
        patternUnits="userSpaceOnUse"
        width="8"
      >
        <path
          d="M 8 0 L 0 0 0 8"
          fill="none"
          stroke="#ECEFF1"
          strokeWidth="0.5"
        />
      </pattern>
      <pattern
        height="80"
        id="grid"
        patternUnits="userSpaceOnUse"
        width="80"
      >
        <rect
          fill="url(#smallGrid)"
          height="80"
          width="80"
        />
        <path
          d="M 80 0 L 0 0 0 80"
          fill="none"
          stroke="#E0E0E0"
          strokeWidth="1"
        />
      </pattern>
    </defs>
    <rect
      fill="url(#grid)"
      height="100%"
      width="100%"
    />
  </svg>
  <div>
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.3)",
            "padding": "15px 13px 3px",
          }
        }
      >
        <button
          className=" kamamana-ButtonStyled kamamana-_jya76v"
        >
          <span
            className="btn-text"
          >
            Click Me
          </span>
        </button>
      </div>
    </div>
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
    <div
      style={
        Object {
          "background": "white",
          "bottom": 0,
          "display": "none",
          "left": 0,
          "overflow": "auto",
          "padding": "0 40px",
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 99999,
        }
      }
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        ×
      </button>
      <div>
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "backgroundColor": "#fff",
              "border": "1px solid #eee",
              "borderRadius": "2px",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
              "fontWeight": 300,
              "lineHeight": 1.45,
              "marginBottom": "20px",
              "marginTop": "20px",
              "padding": "20px 40px 40px",
            }
          }
        >
          <div
            style={
              Object {
                "borderBottom": "1px solid #eee",
                "marginBottom": 10,
                "paddingTop": 10,
              }
            }
          >
            <h1
              style={
                Object {
                  "fontSize": "35px",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
              Buttons
            </h1>
            <h2
              style={
                Object {
                  "fontSize": "22px",
                  "fontWeight": 400,
                  "margin": "0 0 10px 0",
                  "padding": 0,
                }
              }
            >
              ghost
            </h2>
          </div>
          
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Story Source
            </h1>
            <pre
              className="css-r8d96o eyvlbql0"
            >
              <div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &lt;
                      div
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          style
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  padding
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                '15px 13px 3px'
                              </span>
                              ,
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  backgroundColor
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                'rgba(0, 0, 0, 0.3)'
                              </span>
                              }
                            </span>
                            }
                          </span>
                        </span>
                        
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &lt;
                      Button
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          type
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              ghost
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          text
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              Click Me
                            </span>
                            "
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &lt;/
                      div
                      &gt;
                    </span>
                  </div>
                </div>
              </div>
              <button
                className="css-1naocv3 eva467m0"
                onClick={[Function]}
              >
                <div
                  className="css-lvl6aa eva467m1"
                >
                  <div
                    style={
                      Object {
                        "marginBottom": 6,
                      }
                    }
                  >
                    Copied!
                  </div>
                  <div>
                    Copy
                  </div>
                </div>
              </button>
            </pre>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Prop Types
            </h1>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }
              >
                "
                Button
                " Component
              </h2>
              <table
                className="css-1uhv8nx e1vdo5380"
              >
                <thead>
                  <tr>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      property
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      propType
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      required
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      default
                    </th>
                    <th
                      className="css-11b5gui e6fp4ir1"
                    >
                      description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="css-1qcb1f7 e6fp4ir0"
                    >
                      style
                    </td>
                    <td
                      className="css-1qcb1f7 e6fp4ir0"
                    >
                      <span>
                        unknown
                      </span>
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    >
                      -
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    >
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        {
                        }
                      </span>
                    </td>
                    <td
                      className="css-11b5gui e6fp4ir0"
                    />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
